# AquaEngine

./: .clangd  .gitignore  AUTOMATION_SETUP.md  CMakeLists.txt  CMakePresets.json  DEPENDENCIES.md  DEVELOPMENT.md  DEVELOPMENT_JOURNEY.md  NANITE_ROADMAP.md  NEXT_DEVELOPMENT_PLAN.md  PROJECT_STATUS_SUMMARY.md  README.md  RELEASE_NOTES_v1.0.md  TEXTURE_DEVELOPMENT_PLAN.md  TEXTURE_SYSTEM_PROGRESS.md  TEXTURE_SYSTEM_SPEC.md  TEXTURE_SYSTEM_STATUS.md  build.bat  compile_commands.json  config.ini  cube_demo.cpp  cube_demo_CMakeLists.txt  cube_window_CMakeLists.txt  cube_window_demo.cpp  debug_test.cpp  demo.ps1  dual_cube_demo.cpp  dual_cube_textured_demo.cpp  project_status.md  run_demo.bat  simple_triangle.cpp  test_CMakeLists.txt  test_aquavisual.cpp  test_minimal.cpp  test_namespace.cpp  test_renderer.cpp  test_renderer_simple.cpp  test_texture_minimal.cpp  texture_demo_results.md  textured_cube_demo.cpp
AquaCore/: CMakeLists.txt  README.md
AquaVisual/: API_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE_DESIGN.md  AquaVisualConfig.cmake.in  CMakeLists.txt  CMakePresets.json  COMPLETE_DEMO_ROADMAP.md  DEVELOPMENT_STATUS.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  TECHNICAL_DECISIONS.md  USAGE_GUIDE.md  run_demos.py
AquaVisual/Examples/: CMakeLists.txt
AquaVisual/Examples/Basic/: CMakeLists.txt  ComprehensiveTest.cpp  DepthLightingDemo.cpp  ExternalAppDemo.cpp  FrameRateTest.cpp  MeshRenderingTest.cpp  PBRLightingDemo.cpp  SceneDemo.cpp  SimpleExample.cpp  SimpleMeshTest.cpp  SimpleVulkanTest.cpp  TestAquaVisual.cpp  VulkanDemo.cpp  VulkanWindowDemo.cpp  lightingscenedemo.cpp
AquaVisual/Examples/BasicTriangle/: CMakeLists.txt  main.cpp
AquaVisual/Examples/Integration/: AquaEngineIntegration.cpp  CMakeLists.txt  ThirdPartyIntegration.cpp
AquaVisual/Examples/TextureLoadTest/: CMakeLists.txt  texture_load_test.cpp
AquaVisual/Examples/WindowTest/: CMakeLists.txt  WindowTest.cpp
AquaVisual/Include/AquaVisual/: AquaVisual.h  AquaVisualMVP.h  Math.h  Primitives.h  RenderAPI.h  SimpleAPI.h
AquaVisual/Include/AquaVisual/Core/: BufferManager.h  Camera.h  Common.h  Material.h  RenderAPI.h  RenderPipeline.h  Renderer.h  ShaderManager.h  VulkanRenderer.h  VulkanRendererImpl.h  Window.h
AquaVisual/Include/AquaVisual/Lighting/: LightingSystem.h
AquaVisual/Include/AquaVisual/Materials/: PBRMaterial.h
AquaVisual/Include/AquaVisual/Math/: Matrix.h  Vector.h
AquaVisual/Include/AquaVisual/Resources/: Mesh.h  Texture.h
AquaVisual/Shaders/: basic.vert  colored.frag  cube.vert  cube_fixed.vert  cube_improved.vert  cube_lit.frag  cube_lit.vert  cube_lit_frag.spv  cube_lit_vert.spv  cube_multi_light.frag  cube_multi_light.vert  cube_multi_light.vert.spv  cube_multi_light_frag.spv  cube_multi_light_vert.spv  cube_positioned.vert  cube_positioned_vert.spv  cube_simple.vert  cube_simple_color.frag  cube_simple_color_frag.spv  cube_textured.frag  cube_textured.vert  cube_textured_frag.spv  cube_time.vert  cube_vert.spv  cube_visible.vert  cube_visible_vert.spv  debug_cube.vert  debug_cube_fixed.vert  debug_cube_fixed_vert.spv  debug_cube_vert.spv  dual_cube.vert  dual_cube_textured.frag  dual_cube_textured.vert  dual_cube_textured_frag.spv  dual_cube_textured_vert.spv  dual_cube_vert.spv  fullscreen_test.vert  fullscreen_test_vert.spv  pbr_lighting.frag  pbr_lighting.vert  (+2 more)
AquaVisual/Source/: AquaVisual.cpp  AquaVisualMVP.cpp
AquaVisual/Source/Core/: BufferManager.cpp  Camera.cpp  Material.cpp  RenderPipeline.cpp  Renderer.cpp  ShaderManager.cpp  SimpleAPI.cpp  Texture.cpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererImpl.cpp  Window.cpp
AquaVisual/Source/Lighting/: LightingSystem.cpp
AquaVisual/Source/Materials/: PBRMaterial.cpp
AquaVisual/Source/Math/: Math.cpp  Matrix.cpp  Vector.cpp
AquaVisual/Source/Resources/: Mesh.cpp  Primitives.cpp  Texture.cpp
AquaVisual/Source/Vulkan/: VulkanRendererImpl.cpp
Build_Simple_Triangle/: CMakeLists.txt  simple_triangle.cpp
Build_Simple_Triangle/SimpleTriangle.dir/Debug/: SimpleTriangle.exe.recipe
Build_Simple_Triangle/SimpleTriangle.dir/Debug/SimpleTriangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  SimpleTriangle.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Build_Simple_Triangle/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
Build_Simple_Triangle/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Core/: CMakeLists.txt
Core/Math/: Matrix4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Core/Platform/: Application.cpp  Application.h  Window.cpp  Window.h
Core/Renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TriangleRenderer.cpp  TriangleRenderer.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.h
Core/Utils/: Config.h  Logger.h
DebugProjects/RotatingCube/: CMakeLists.txt  README.md  build_and_run.bat  rotating_cube_demo.cpp
DualCubeTexturedDemo/: CMakeLists.txt
DualCubeTexturedDemo/AquaVisual/Shaders/: dual_cube_textured_frag.spv  dual_cube_textured_vert.spv
Engine/: CMakeLists.txt
Examples/: CMakeLists.txt  MVP_Demo.cpp
Examples/BasicTextureDemo/: CMakeLists.txt  main.cpp
Examples/HelloTriangle/: CMakeLists.txt  main.cpp
Examples/SimpleTextureDemo/: CMakeLists.txt  main.cpp
Examples/SimpleTextureRender/: CMakeLists.txt  main.cpp
Examples/SimpleTextureShow/: CMakeLists.txt  main.cpp
Examples/TextureDemo/: CMakeLists.txt  main.cpp
Examples/TextureRenderDemo/: CMakeLists.txt  main.cpp
Examples/TextureRenderingDemo/: CMakeLists.txt  main.cpp
Examples/TextureShowcase/: CMakeLists.txt  main.cpp
Examples/TextureTest/: CMakeLists.txt  main.cpp
Examples/TextureWindowDemo/: CMakeLists.txt  main.cpp
TexturedCubeDemo/: CMakeLists.txt
TexturedCubeDemo/AquaVisual/Shaders/: cube_fixed_vert.spv
TexturedCubeDemo/TexturedCubeDemo.dir/Debug/: TexturedCubeDemo.exe.recipe
TexturedCubeDemo/TexturedCubeDemo.dir/Debug/TexturedCubeDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+2 more)
(+158 files in other folders)
